tests/paczka1/small_fuzzy/69321361.err
Error in line 3: OHxeLqbG A704 61,39
Error in line 5: SlX A948 36,9
Error in line 13: BygEXsLuo A789 27,3
Error in line 4: OHxeLqbG A704 282,3
